11-09-2018
- Fixed world not saving experience
- Fixed Student Followers/Mining confusion
- Fixed Twin rounding
- Fixed group chatrs not updating

10-09-2018
- Fixed loading error
- Fixed some typos

09-09-2018
- Initial release