@@ -17,7 +17,7 @@
 
       <div *ngIf="research.unlimited ">
         <label for="max">Max level:</label>
-        <input type="text"
+        <input type="number"
                id="max"
                class="clr-input"
                [(ngModel)]="research.maxAutoBuyLevel"
